# blocks_iterator

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  Readme.md  flake.nix
.github/workflows/: rust.yml
benches/: Cargo.toml
benches/src/: lib.rs
blocks/: README.md
cli/: Cargo.toml
cli/examples/: outputs_versions.rs  signatures_in_witness.rs  verify.rs  with_pipe.rs
cli/src/: main.rs
examples/: bench.rs  collisions.rs  compression.rs  heaviest.rs  heaviest_pipe.rs  iterate.rs  less_reward.rs  less_reward_pipe.rs  most_output.rs  most_output_pipe.rs  most_reused_address.rs  outputs_versions.rs  signatures_in_witness.rs  verify.rs  with_pipe.rs
lib/: Cargo.toml
lib/src/: block_extra.rs  bsl.rs  config.rs  iter.rs  lib.rs  period.rs  pipe.rs
lib/src/stages/: compute_txids.rs  fee.rs  mod.rs  read_detect.rs  reorder.rs
lib/src/utxo/: db.rs  mem.rs  mod.rs  redb.rs
src/: bench.rs  block_extra.rs  bsl.rs  config.rs  error.rs  fee.rs  iter.rs  lib.rs  main.rs  parse.rs  pipe.rs  read.rs  read_detect.rs  read_parse.rs  reorder.rs  truncmap.rs  varint.rs
src/stages/: compute_txids.rs  fee.rs  mod.rs  read_detect.rs  reorder.rs
src/utxo/: db.rs  mem.rs  mod.rs  redb.rs
