[package]
name = "blocks_iterator"
version = "0.13.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
description = "Iterates Bitcoin blocks"
repository = "https://github.com/RCasatta/blocks_iterator"
documentation = "https://docs.rs/blocks_iterator/"
keywords = ["bitcoin", "blocks", "iterate"]
readme = "README.md"
license = "MIT"

[dependencies]
bitcoin =  { version = "0.28.0", features = ["use-serde"]}
structopt = "0.3.21"
log = "0.4.11"
glob = "0.3.0"
fxhash = "0.2.1"
env_logger = "0.9"

rand = { version = "0.8.4", optional = true }
rocksdb = { version = "0.18.0", optional = true, default-features = false }

# only for benching
blake3 = { version = "1.0.0", optional = true }
sha2 = { version = "0.10.2", optional = true, features = ["asm"] }

# only for verify example
bitcoinconsensus = { version = "0.19.0-3", optional = true }

rayon = "1.5.0"

[dev-dependencies]
tempfile = "3.2.0"

[features]
default = ["db", "consensus"]
db = ["rocksdb", "rand"]
consensus = ["bitcoinconsensus", "bitcoin/bitcoinconsensus"]
unstable = ["sha2", "blake3"]

[[example]]
name = "heaviest_pipe"

[[example]]
name = "most_output_pipe"

[[example]]
name = "verify"
required-features = ["consensus"]

[[example]]
name = "signatures_in_witness"

[[example]]
name = "outputs_versions"

[patch.crates-io]
bitcoinconsensus = { git ="https://github.com/RCasatta/rust-bitcoinconsensus", rev="12a909866d5346fc79e3c068f3c15bee1e3e7342" }
