[package]
name = "blocks_iterator_cli"
version = "2.1.1"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
description = "Iterates Bitcoin blocks"
repository = "https://github.com/RCasatta/blocks_iterator"
documentation = "https://docs.rs/blocks_iterator/"
keywords = ["bitcoin", "blocks", "iterate"]
readme = "README.md"
license = "MIT"
categories = [
    "cryptography::cryptocurrencies",
    "command-line-utilities",
    "encoding",
]

[features]
consensus = ["blocks_iterator/consensus"]

[dependencies]
blocks_iterator = { version = "2.1.1", path = "../lib", features = ["cli"] }
bitcoin = { workspace = true, features = ["serde"] }
clap = { workspace = true }
env_logger = ">=0.10,<0.12"
log = { workspace = true }
rayon = { version = "1.5.0", optional = true }

[dev-dependencies]
bitcoinconsensus = { version = "0.20.2-0.5.0" }

[[example]]
name = "with_pipe"

[[example]]
name = "verify"
required-features = ["consensus", "rayon"]

[[example]]
name = "signatures_in_witness"

[[example]]
name = "outputs_versions"
