[package]
name = "blocks_iterator"
version = "2.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
description = "Iterates Bitcoin blocks"
repository = "https://github.com/RCasatta/blocks_iterator"
documentation = "https://docs.rs/blocks_iterator/"
keywords = ["bitcoin", "blocks", "iterate"]
readme = "README.md"
license = "MIT"
categories = [
    "cryptography::cryptocurrencies",
    "command-line-utilities",
    "encoding",
]

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
clap = { workspace = true, optional = true, features = ["derive"] }
log = { workspace = true }
glob = "0.3.0"
fxhash = "0.2.1"
bitcoin_slices = { version = "0.9.0", features = ["sha2", "bitcoin"] }

rand = { version = "0.8.4", optional = true }
rocksdb = { version = "0.22.0", optional = true, default-features = false }

thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.2.0"
test-log = "0.2.14"

[features]
default = []
db = ["rocksdb", "rand"]
redb = ["bitcoin_slices/redb"]
consensus = ["bitcoin/bitcoinconsensus"]
cli = ["clap"]
